[gd_scene load_steps=2 format=3 uid="uid://b1v2x3k4j5m6n"]

[ext_resource type="Script" uid="uid://2o6xeffcjkja" path="res://Script/UpgradeScreen.gd" id="1_2v5q3"]

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2v5q3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Избери Подобрение"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Option 1"

[node name="Option2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Option 2"

[node name="Option3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Option 3"

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Описание на избраното подобрение ще се появи тук."
autowrap_mode = 2
